# pctrl

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  dev-spec.md
.github/workflows/: ci.yml  release.yml
crates/pctrl-cli/: Cargo.toml
crates/pctrl-cli/src/: main.rs
crates/pctrl-cli/tests/: integration_test.rs  regression_test.rs
crates/pctrl-config/: Cargo.toml
crates/pctrl-config/src/: lib.rs
crates/pctrl-core/: Cargo.toml
crates/pctrl-core/src/: lib.rs
crates/pctrl-dict/: Cargo.toml
crates/pctrl-dict/src/: lib.rs
crates/pctrl-engine/: Cargo.toml  build.rs
crates/pctrl-engine/src/: lib.rs  pinyin_map_phf.rs
crates/pctrl-output/: Cargo.toml
crates/pctrl-output/src/: lib.rs
crates/pctrl-segment/: Cargo.toml
crates/pctrl-segment/src/: lib.rs
dictionaries/history/: cc_cedict_history.json  history_core.json
docs/: usage.md
examples/: add_custom_entry.py  batch_convert.sh  filter_history_terms.py  tts_pipeline.py
scripts/: build_from_cc_cedict.py
